--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         font-family: "Space Grotesk", sans-serif;
         font-weight: 500;
         font-size: 1.1vw;
-        background-color: #312d24;
+        background-color: #252018;
         border: none;
         color: white;
         cursor: url(https://cdn.glitch.global/7db61c98-02ba-4ce5-a6fd-758d2b3cb1ed/cursor2.png?v=1676301058920)
@@ -80,11 +80,11 @@
         height: 2.4vw;
         margin: 0px 2vw;
         border: none;
-        border-bottom: 0.2vw solid #312d24;
+        border-bottom: 0.2vw solid #252018;
         font-family: "Space Grotesk", sans-serif;
         font-weight: 500;
         font-size: 1.3vw;
-        color: #312d24;
+        color: #252018;
         outline: none;
         background: none;
         letter-spacing: 0rem;
@@ -95,7 +95,7 @@
       }
       
       a {
-        color: #312d24;
+        color: #252018;
       }
       
       input[type="text"]:hover,
@@ -104,7 +104,7 @@
       }
       ::placeholder {
         /* Chrome, Firefox, Opera, Safari 10.1+ */
-        color: #312d24;
+        color: #252018;
       }
       h1 {
         font-family: "Space Grotesk", sans-serif;
@@ -115,14 +115,14 @@
         align-self: flex-end;
         margin-bottom: 0.7vw;
         margin-left: 1vw;
-        color: #312d24;
+        color: #252018;
         user-select: none;
       }
       h2 {
         font-family: "Space Grotesk", sans-serif;
         font-weight: 500;
         font-size: 2.5vw;
-        color: #312d24;
+        color: #252018;
         letter-spacing: 0rem;
         transition: 0.5s;
       }
@@ -135,7 +135,7 @@
         font-family: "Space Grotesk", sans-serif;
         font-weight: 500;
         font-size: 1.5vw;
-        color: #312d24;
+        color: #252018;
         letter-spacing: 0rem;
         transition: 0.5s;
         text-align: right;
@@ -148,7 +148,7 @@
         font-family: "Space Grotesk", sans-serif;
         font-weight: 500;
         font-size: 1.5vw;
-        color: #312d24;
+        color: #252018;
         width: 100vw;
         text-align: center;
         position: fixed;
@@ -162,7 +162,7 @@
         font-family: "Space Grotesk", sans-serif;
         font-weight: 500;
         font-size: 1.5vw;
-        color: #312d24;
+        color: #252018;
         letter-spacing: 0rem;
         transition: 0.5s;
         width: 29vw;
@@ -228,7 +228,7 @@
       }
       #line,
       #line2 {
-        background-color: #312d24;
+        background-color: #252018;
         margin-top: 1vh;
         margin: auto;
         height: 0.26vw;
@@ -258,7 +258,7 @@
           <br />Glued to your phone is no way to live your life, and a week-long
           digital detox probably won’t help.
         </p>
-        <p id="right"><a href="https://twitter.com/intent/tweet?text=Goodbye%20world%20insta-killer.click" target="_blank">Share your goodbyes</a></p>
+        <p id="right"><a href="https://twitter.com/intent/tweet?text=I%27m%20saying%20goodbye%20forever%20to%20my%20Instagram%20account%20with%20%23instakiller%0A%0Awww.insta-killer.click" target="_blank">Share your goodbyes</a></p>
       </div>
       <div id="header">
         <h2 id="how" onmouseenter="displayleft()" onmouseleave="hideleft()">
